[package]
name = "eth-rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.14"
eyre = "0.6.12"
tiny-bip39 = "1.0.0"
tokio = { version = "1.36.0", features = ["full"] }
